<?xml version="1.0"?>
<package format="2">

  <name>pkg_a_underlay</name>
  <version>0.0.0</version>
  <description>The pkg_a_underlay package</description>

  <maintainer email="miguel.prada@tecnalia.com">Miguel Prada</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>

</package>
